--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -59,19 +59,14 @@
   }
 }
 
-@layer base {
-  * {
-    @apply border-border;
-  }
-  body {
-    @apply bg-background text-foreground;
-  }
-}
+
 
 body {
   margin: 0;
   padding: 0;
   height: 100vh;
+  width: 100vw;
+  background-color: #ec5656;
   
  
 
