--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -59,25 +59,24 @@
   }
 }
 
-
-
 body {
   margin: 0;
   padding: 0;
   height: 100vh;
   width: 100vw;
-  background-color: #56ec6c;
-  
- 
-
+  display: flex;
+  flex-direction: column;
+  font-family: Arial, sans-serif;
+  overflow-x: hidden; /* Prevent horizontal scroll */
 }
 
 .player-card {
   background-color: #f5f5f5;
+  padding: 1rem;
+  margin-bottom: 1rem;
   border-radius: 0.5rem;
   box-shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, 0.15);
   text-align: center;
-  
 }
 
 .player-name {
@@ -93,7 +92,7 @@ body {
 
 .player-button {
   padding: 1rem 2rem;
-  background-color: #007BFF;
+  background-color: rgb(241, 88, 87);
   color: white;
   border: none;
   border-radius: 0.5rem;
@@ -106,10 +105,28 @@ body {
 }
 
 .player-image {
-  width: 100px; 
+  width: 100px;
   height: 100px;
   border-radius: 50%;
   display: block;
   margin-left: auto;
   margin-right: auto;
+
+
+}
+
+
+h2{
+ 
+  font-size: 1.75rem;
+  font-weight: 700;
+  color: rgb(241, 88, 87);
+  text-align: center;
+}
+
+h3 {
+  color: #333;
+  font-size: 1.5rem;
+  color: white;
+  text-align: center;
 }
